<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main_windows"
            android:title="@string/menu_open_main_windows" />
        <item
            android:id="@+id/nav_manage"
            android:title="@string/nav_manage" />
    </group>

    <item android:title="@string/menu_communicate">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_about_developers"
                    android:title="@string/menu_about_developers" />
                <item
                    android:id="@+id/nav_share"
                    android:title="@string/menu_share" />
                <item
                    android:id="@+id/nav_exit_app"
                    android:title="@string/menu_exit_app" />
            </group>
        </menu>
    </item>

</menu>
